=========
Changelog
=========

1.0b26 (unreleased)
===================

- Nothing changed yet.


1.0b25 (2014-07-31)
===================

- Improve gpg handling: don't do --no-tty or --batch any longer as we actually
  only run the gpg code in (local) terminal environments usually.

1.0b24 (2014-07-04)
===================

- Actually fix unzipping.

- Remove environment option ``connect_method``, and use autodetection instead:
  If we're not the configured ``service_user`` after the plain ssh connect,
  run sudo.

- Refactor attributes and overrides: attributes allow template expansion now
  and also converting default values. The Attribute class has moved to the
  batou component module.

- Yield nonzero returncode on remote exceptions.

- Add convenience converter for attributes "list" to handle comma separated
  lists of strings.

- Force safety of Nagios service description field: prohibit "," as its not
  safe for Nagios business processes.

- Allow specifying custom rsync options for SyncDir: the '--inplace' option
  is a good idea in most cases, but not all. Fixes #11846.

- Make supervisor restart/reload more robust towards non-running supervisors
  with lying PID files. Fixes #12744.

- Remove harmful decoding step in File verify that caused wrong results.


1.0b23 (2014-06-30)
===================

- Allow unzip to overwrite existing files if the archive has newer copies.


1.0b22 (2014-06-30)
===================

- Fix uncaught import-error on mysql module.


1.0b21 (2014-06-30)
===================

- Fix bug in bundle shipping that made batou depend on the locale (#13465).

- Add MySQL components.

- Introduce batou.utils.Attribute() to avoid imperative type conversions in
  configure().

1.0b20 (2014-05-13)
===================

- Start using python-requests for HTTP/S downloads to support authentication
  (and other goodies).

- Improve error logging.


1.0b19 (2014-04-07)
===================

- Allow specifying alternate find-links in requirements.txt
